app-in-apps/yaml/jellyfin/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: jellyfin-service
  namespace: jellyfin
spec:
  ports:
    - name: https
      port: 8096
      targetPort: 8096
  selector:
    app: jellyfin
  type: ClusterIP
